--- a/microweb.css
+++ b/microweb.css
@@ -465,7 +465,7 @@
     background: linear-gradient(to top, rgba(0, 0, 0, .75), rgba(0, 0, 0, .1));
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
     color: #fff;
 }
 
@@ -492,7 +492,7 @@
 /* DOTS */
 .hero-dots {
     position: absolute;
-    bottom: 15px;
+    bottom: 30px;
     left: 50%;
     transform: translateX(-50%);
     display: flex;
