--- a/microweb.css
+++ b/microweb.css
@@ -426,7 +426,7 @@
 
 .slider-microweb {
     padding: 10px calc((100% - 1200px) / 2);
-    margin-bottom: 15px;
+    margin-top: 20px;
 }
 
 .hero-slider {
