--- a/style.css
+++ b/style.css
@@ -35,27 +35,44 @@ body {
 }
 
 
+:root {
+    --main-nav-height: 48px;
+    --sub-nav-height: 60px;
+}
+
 .navbar-main {
     background-color: #fff;
     border-bottom: 1px solid #e5e7eb;
-    padding: 14px 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
+    padding: 6px calc((100% - 1200px) / 2);
+    position: fixed;
     top: 0;
-    z-index: 1001;
+    left: 0;
+    width: 100%;
+    z-index: 1002;
 }
 
 .navbar-sub {
-    position: sticky;
+    position: fixed;
     top: 68.5px;
-    z-index: 1000;
+    left: 0;
+    width: 100%;
+    z-index: 1001;
     background-color: #fff;
-    padding: 15px 20px;
+    padding: 15px calc((100% - 1200px) / 2);
     display: flex;
-    justify-content: center;
     border-bottom: 1px solid #e5e7eb;
+}
+
+body {
+    padding-top: calc(var(--main-nav-height) + var(--sub-nav-height));
+}
+
+
+.navbar-padding {
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .navbar-main .logo {
@@ -83,6 +100,7 @@ body {
 .navbar-main ul {
     list-style: none;
     display: flex;
+    align-items: center;
     gap: 20px;
     margin: 0;
     padding: 0;
@@ -91,7 +109,7 @@ body {
 .navbar-main ul li a {
     color: #000;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 15px;
     position: relative;
     text-decoration: none;
@@ -170,6 +188,7 @@ body {
     color: #fff;
     text-decoration: none;
     padding: 10px 20px;
+    font-weight: 500;
 }
 
 .login {
@@ -179,6 +198,7 @@ body {
     color: #000;
     display: flex;
     gap: 5px;
+    font-weight: 500;
 }
 
 .login-mobile,
@@ -776,6 +796,10 @@ body {
 
     .navbar-main {
         padding: 14px 15px;
+    }
+
+    .navbar-padding {
+        padding: 0;
     }
 
     .img-unila {
