--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ body {
     position: fixed;
     top: 0;
     left: 0;
+        box-sizing: border-box;
     width: 100%;
     z-index: 1002;
 }
@@ -71,7 +72,7 @@ body {
 .navbar-padding {
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    width: 100%;
     align-items: center;
 }
 
@@ -95,6 +96,7 @@ body {
     gap: 20px;
     margin: 0;
     padding: 0;
+    margin-left: auto;
 }
 
 .navbar-main ul {
@@ -135,9 +137,9 @@ body {
 .navbar-sub ul {
     list-style: none;
     display: flex;
-    gap: 20px;
+    gap: 25px;
     margin: 0;
-    padding: 0;
+    padding: 0 10px;
 }
 
 .navbar-sub ul li a {
@@ -150,7 +152,6 @@ body {
     position: relative;
 }
 
-/* submenu default tersembunyi */
 .navbar-sub ul li .sub-menu {
     position: absolute;
     top: 100%;
