--- a/style.css
+++ b/style.css
@@ -917,16 +917,14 @@ body {
         height: calc(100vh * 0.30);
     }
 
-     .navbar-sub {
+    .navbar-sub {
         display: flex;
         justify-content: flex-start;
         padding: 12px 16px;
         gap: 16px;
-
         white-space: nowrap;
         overflow-x: auto;
         overflow-y: hidden;
-
         -webkit-overflow-scrolling: touch;
         scrollbar-width: none;
     }
@@ -937,7 +935,7 @@ body {
 
     .navbar-sub ul {
         display: flex;
-        gap: 16px;
+        gap: 22px;
         margin: 0;
         padding: 0;
         list-style: none;
@@ -951,13 +949,11 @@ body {
         position: fixed;
         display: none;
         flex-direction: column;
-
         min-width: 180px;
         padding: 10px 0;
-
         background: #fff;
         border: 1px solid #e5e7eb;
-        z-index: 9999;
+        z-index: 99999;
     }
 
     .navbar-sub ul li:focus-within>.sub-menu {
@@ -967,6 +963,23 @@ body {
     @media (hover: hover) {
         .navbar-sub ul li:hover>.sub-menu {
             display: flex;
+        }
+    }
+
+    .navbar-sub ul li.active>.sub-menu {
+        display: flex;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        .navbar-sub {
+            -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+        }
+
+        .navbar-sub ul li .sub-menu {
+            position: absolute;
+            top: 100%;
+            left: 0;
         }
     }
 
