--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-        box-sizing: border-box;
     width: 100%;
     z-index: 1002;
+    box-sizing: border-box;
 }
 
 .navbar-sub {
@@ -62,6 +62,7 @@ body {
     padding: 15px calc((100% - 1200px) / 2);
     display: flex;
     border-bottom: 1px solid #e5e7eb;
+    box-sizing: border-box;
 }
 
 body {
@@ -74,6 +75,7 @@ body {
     display: flex;
     width: 100%;
     align-items: center;
+    box-sizing: border-box;
 }
 
 .navbar-main .logo {
@@ -82,22 +84,31 @@ body {
     font-weight: 500;
     display: flex;
     align-items: center;
+
+    flex: 1;
 }
 
 .logo-img {
     width: 180px;
     height: 40px;
-    margin-right: 20px
+    margin-right: 20px;
+    object-fit: contain;
 }
+
+/* Button user kanan */
 
 .button-user {
     list-style: none;
     display: flex;
     gap: 20px;
-    margin: 0;
     padding: 0;
-    margin-left: auto;
+    margin: 0;
+    align-items: center;
 }
+
+
+
+
 
 .navbar-main ul {
     list-style: none;
