--- a/style.css
+++ b/style.css
@@ -10,9 +10,28 @@ body {
     font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
 }
 
-/* animasi dasar */
+#backToTop {
+    position: fixed;
+    right: 16px;
+    bottom: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: none;
+    background: #DC0000;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 900;
+    cursor: pointer;
+    opacity: 1;
+    visibility: visible;
+    z-index: 2147483647;
+}
+
+
 .animate-item {
     opacity: 0;
     animation: slideUpSlow 2.8s ease-out forwards;
@@ -982,25 +1001,25 @@ body {
 
     @supports (-webkit-touch-callout: none) {
 
-    .navbar-sub {
-        position: relative;
-        z-index: 9999;
-    }
+        .navbar-sub {
+            position: relative;
+            z-index: 9999;
+        }
 
-    .navbar-sub ul li .sub-menu {
-        position: fixed;
-        top: auto;
-        left: auto;
-        transform: translate3d(0,0,0);
-        -webkit-transform: translate3d(0,0,0);
-        will-change: transform;
-    }
+        .navbar-sub ul li .sub-menu {
+            position: fixed;
+            top: auto;
+            left: auto;
+            transform: translate3d(0, 0, 0);
+            -webkit-transform: translate3d(0, 0, 0);
+            will-change: transform;
+        }
 
-    .navbar-sub ul li:focus-within > .sub-menu,
-    .navbar-sub ul li:active > .sub-menu {
-        display: flex;
+        .navbar-sub ul li:focus-within>.sub-menu,
+        .navbar-sub ul li:active>.sub-menu {
+            display: flex;
+        }
     }
-}
 
 
 
